# pi_web

./: .env.example  .gitignore  AGENTS.md  LOG_SYSTEM  README.md  eslint.config.js  frontend_polish_状态.json  package-lock.json  package.json  pnpm-lock.yaml
.github/agents/: ask-loop-general.agent.md  ui-designer.agent.md  完整工作流智能体.agent.md
.pi-web/: session-sidebar.json
_temp/: fleeting-design-c.html  fleeting-explore.html  fleeting-redesign.html  fleeting-waterfall-variants.html
android/app/: build.gradle
instructions/: design.md
long_task/pi消息直传渲染收敛/: findings.md  progress.md  task_plan.md
services/converter/: .env.example  Dockerfile  README.md  pyproject.toml
services/converter/src/ridge_converter/: __init__.py  app.py  artifacts.py  config.py  converters.py  errors.py  input_sources.py  jobs.py  main.py  models.py
services/converter/tests/: test_api_contract.py
test-results/: .last-run.json
test-results/packages-web-e2e-task-10-p-9ad3c-ton-presence-in-task-detail/: error-context.md
文档/: 双工作模式愿景.md  双模式云端本地互通架构愿景.md  增强文件预览编辑愿景.md  完美移动端支持愿景.md  设计系统.md  需求目录.md
文档/spec/: ridge-db-workspace-path-legacy-migration.spec.md  server-port-conflict.spec.md  任务系统SQLite真源最小实现.spec.md  单用户固定密码认证.spec.md  工作空间菜单路由重构.spec.md  工作空间首页AI启动台Spec.md  文件树功能测试Spec.md  笔记新建目录选择与组织体验.spec.md  笔记编辑可靠性.spec.md  闪念系统-v1.spec.md  首页目标到Pi会话.spec.md
文档/功能开发/: 00-工作空间初始化与目录结构.md  01-ridge-db基础表与迁移框架.md  03-工作台Shell与标签系统.md  08-任务里程碑数据模型.md  09-任务列表详情与状态流转.md  10-任务处理会话与任务Agent.md  11-规划工具与完成确认边界.md  13-闪念临时附件生命周期.md  14-桌面采集入口.md  15-fleeting-agent分析建议.md  (+81 more)
(+392 files in other folders)
