[project]
name = "ridge-converter"
version = "0.1.0"
description = "Independent Python conversion backend for ridge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "markitdown[all]>=0.1.0",
  "openai>=1.50.0",
  "pillow>=10.0.0",
  "pydantic>=2.8.0",
  "pytesseract>=0.3.13",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
audio = [
  "faster-whisper>=1.0.0",
]
dev = [
  "pytest>=8.0.0",
]
all = [
  "faster-whisper>=1.0.0",
  "pytest>=8.0.0",
]

[project.scripts]
ridge-converter = "ridge_converter.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ridge_converter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
